<resources>
    <string name="app_name">TakeNGo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">New? Register</string>
    <string name="action_log_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_enter">Enter</string>
    <string name="action_clear">Clear</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email  completions."</string>

    <string name="id">ID: </string>
    <string name="lastName">Last Name: </string>
    <string name="firstName">First Name: </string>
    <string name="phoneNum">Phone Number: </string>
    <string name="email">Email: </string>
    <string name="creditCard">Credit Card: </string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="action_enter_pass">Enter (Password)</string>
    <string name="action_enter_user">Enter (Username)</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="add_order">Add Order</string>

</resources>
